# rust-crash-course

./: .gitignore  README.md
.github/workflows/: rust.yml
rust-crash-course/: Cargo.toml
rust-crash-course/examples/: golden.rs  ownership.rs
rust-crash-course/exercises/: README.md  exercise-01-golden.md  exercise-02-ownership.md
rust-crash-course/lessons/: 01-intro.md  02-variables-and-types.md  03-ownership-borrowing.md  04-lifetimes.md  05-structs-enums-patterns.md  06-iterators-collections.md  07-error-handling.md  08-generics-traits.md  09-async-concurrency.md  10-testing-cargo.md  11-performance-safety.md  12-ecosystem-and-crates.md
rust-crash-course/solutions/: README.md  solution-01-golden.rs  solution-02-ownership.rs
rust-crash-course/src/: lib.rs  main.rs
rust-crash-course/tests/: integration_test.rs
