[package]
name = "rust-crash-course"
version = "0.1.0"
edition = "2021"
description = "A practical and exhaustive Rust crash course with lessons, examples, and exercises."
authors = ["Andres <andres@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

